--- a/package.json
+++ b/package.json
@@ -18990,6 +18990,9 @@
     "makecoder": {
       "version": "*"
     },
+    "ms-vue-elet": {
+      "version": "1.11.58"
+    },
     "next": {
       "version": "*"
     },
